--- a/DIA 3/style.css
+++ b/DIA 3/style.css
@@ -71,9 +71,10 @@ body{
     color: black;
     text-decoration: none;
 }
-.informacionB{
+#informacionB{
     position: relative;
     left: 980px;
+    top: -300;
     bottom: 150px;
     width: 27px;
     height: 27px;
@@ -92,7 +93,7 @@ body{
 .informacionh1{
     position: relative;
     font-weight: bold;
-    left: 754px;
+    left: 154px;
     bottom: 200px;
 }
 .cuadrado{
@@ -141,3 +142,9 @@ body{
     position: relative;
     left: 100px;
 }
+#linea{
+    position: relative;
+    top: -200px;
+    left: 755px;
+}
+
