--- a/DIA 6/style.css
+++ b/DIA 6/style.css
@@ -369,6 +369,75 @@
     width: 1918px;
     height: 269px;
 }
+#inicio{
+    position: relative;
+    top: -4933px;
+    width: 941px;
+    height: 56px;
+    border-radius: 108px;
+    font-size: 33px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color:#f2f2f2;
+    left: -74px;
+}
+#tramites3{
+    position: relative;
+    top: -5021px;
+    width: 941px;
+    height: 56px;
+    border-radius: 108px;
+    font-size: 33px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color:#f2f2f2;
+    left: 166px;
+}
+#gobierno{
+    position: relative;
+    top: -5134px;
+    left: 784px;
+    width: 346px;
+    height: 100px;
+    font-size: 47px;
+}
+#contacto{
+    position: relative;
+    top: -5246px;
+    width: 941px;
+    height: 56px;
+    border-radius: 108px;
+    font-size: 33px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color:#f2f2f2;
+    left: 818px;
+}
+#consultar2{
+    width: 212px;
+    height: 15px;
+    background-color: #f2f2f2;
+    border: 1px solid #f2f2f2;
+    padding: 20px;
+    top: -5386px;
+    left: 1466px;
+    position: relative;
+    color:black;
+    font-size: 33px;
+    border-radius: 40px 40px 40px 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    text-decoration: none;
+}
+
 #iconfile{
     position: relative;
     top: -3059px;
